# dgamelaunch-nh500

./: .gitignore  Changelog  Makefile.in  README  README.md  autogen.sh  configure.ac  configure.scan  convert_paxed_structure.sh  cpbin  dgamelaunch.8.txt  dgamelaunch.c  dgl-nh500.patch  dgl.patch  findlibs  install-dgl-nh500  sanepath  stripgfx.c  stripgfx.h  ttyplay.c
etc/old_example/: dcss-menu.patch
examples/: dgamelaunch.conf  dgl_menu_main_user.txt
history/: dgl-create-chroot
src/: configure.ac  dgamelaunch.h  ttyplay.c
